<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    tools:context="com.uni.bradford.bib.LoginActivity" >

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo_description"
        android:paddingBottom="35dp"
        android:paddingTop="30dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivLogo"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:textColor="#7e7e7f"
        android:text="@string/login_text" />

    <EditText
        android:id="@+id/etLogin"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvLogin"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:background="#ffffff"
        android:ems="10"
        android:text="B100006"
        android:hint="@string/login_hint"
        android:inputType="text" />

    <Button
        android:id="@+id/btnLogin"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/etLogin"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginBottom="20dp"
        android:background="#0171bd"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:text="@string/login_button" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true" >
        
        <CheckBox
            android:id="@+id/cbRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textColor="#7e7e7f"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tvForgotID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/cbRememberMe"
            android:layout_alignBaseline="@+id/cbRememberMe"
			android:layout_marginLeft="2dp"
            android:text="@string/forgot_id"
            android:textColor="#7e7e7f"
            android:textStyle=""
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
    </RelativeLayout>

    <ImageView
        android:id="@+id/ivBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/bottom_description"
        android:src="@drawable/login_bg" />

</RelativeLayout>