<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlHeightVisual"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    tools:context="com.example.bibtestdump.MainActivity" >

    <TextView
        android:id="@+id/tvSelectChildHint"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:paddingTop="6dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="4dp"
        android:gravity="center_vertical"
        android:text="@string/select_child"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <Spinner
        android:id="@+id/sSelectChild"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvSelectChildHint"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/tvOwnChildHeight"
        android:layout_width="145dp" 
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/sSelectChild"
        android:gravity="center_horizontal"
        android:text="@string/cm" />
    
    <TextView
        android:id="@+id/tvCompareChildHeight"
        android:layout_width="145dp" 
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/sSelectChild"
        android:gravity="center_horizontal"
        android:text="@string/cm" />
    
    <ImageView
        android:id="@+id/ivScale"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tvOwnChildHeight"
        android:layout_above="@+id/vBackground"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/scale_image_description"
        android:src="@drawable/wall_lines" />
    
    <View
        android:id="@id/vBackground"
        android:layout_width="fill_parent" 
        android:layout_height="120dp"
        android:layout_alignParentBottom="true" 
        android:background="#dcd9da" />
    
    <ImageView
        android:id="@+id/ivOwnChild"
        android:layout_width="145dp"
        android:layout_height="290dp"
        android:layout_alignParentLeft="true"
        android:layout_above="@+id/sbTimeLine"
        android:contentDescription="@string/own_child_image_description" />
    
    <ImageView
        android:id="@+id/ivCompareChild"
        android:layout_width="145dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_above="@id/sbTimeLine"
        android:contentDescription="@string/compare_child_image_description" />
    
    <TextView
        android:id="@+id/tvStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_above="@+id/tvCurrent"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:gravity="center"
        android:contentDescription="@string/calendar_image_description" 
        android:background="@drawable/ic_calendar"
        android:text="@string/start_date" />
    
    <TextView
        android:id="@+id/tvEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_above="@id/tvCurrent"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp" 
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:gravity="center"
        android:contentDescription="@string/calendar_image_description" 
        android:background="@drawable/ic_calendar"
        android:text="@string/end_date" />
    
    <SeekBar
        android:id="@id/sbTimeLine"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tvCurrent"
        android:layout_toLeftOf="@id/tvEndDate"
        android:layout_toRightOf="@id/tvStartDate" 
        android:layout_marginTop="10dp"/>
    
    <TextView
        android:id="@id/tvCurrent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvSliderHint"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"/>    
        
    <TextView
        android:id="@id/tvSliderHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        android:text="@string/slider_info" />
    
    <TextView
        android:id="@+id/tvNoData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:text="@string/no_data" />  

</RelativeLayout>